# libinotify-kqueue

./: Makefile  Makefile.am  README  barriers.c  barriers.h  configure.ac  controller.c  conversions.c  dep-list.c  dep-list.h  inotify.h  kqueue-core.h  test.c  utils.c  utils.h  watch.c  watch.h  worker-sets.c  worker-sets.h  worker-thread.c  worker-thread.h  worker.c  worker.h
sys/: inotify.h
tests/: Makefile  notifications_dir_test.cc  notifications_test.cc  notifications_test.hh  open_close_test.hh  start_stop_dir_test.cc  start_stop_test.cc  symlink_test.cc  test.cc  tests.cc
tests/core/: action.cc  action.hh  consumer.cc  consumer.hh  event.cc  event.hh  inotify_client.cc  inotify_client.hh  journal.cc  log.hh  platform.hh  request.cc  request.hh  response.cc  response.hh  test.cc
